--- a/src/app/standalone.pug
+++ b/src/app/standalone.pug
@@ -17,6 +17,9 @@ html(lang='en')
         padding: 0;
         margin: 0;
         border: none;
+        width: 100%;
+        height: 100%;
+        overflow: hidden
       }
       #header {
         height: 36px;
@@ -40,5 +43,5 @@ html(lang='en')
     #app
       header#header
         img#logo(src='./header_logo.svg')
-      iframe#rc-widget-adapter-frame(src='https://ringcentral.github.io/ringcentral-embeddable-voice/app.html', sandbox='allow-same-origin allow-scripts allow-forms allow-popups', allow='microphone')
-    script(src='./app.bundle.js?' + version)
+      iframe#rc-widget-adapter-frame(src!='https://ringcentral.github.io/ringcentral-embeddable-voice/app.html' + appConfigQuery, sandbox='allow-same-origin allow-scripts allow-forms allow-popups', allow='microphone')
+    script(src='./app.js?' + version)
