--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -122,3 +122,15 @@ body .Adapter_root.Adapter_right
   cursor pointer
   &:hover
     color #333
+
+.rc-init-ext-wrap
+  position fixed
+  left 50%
+  bottom -26px
+  margin-left -100px
+  width 200px
+  z-index 200
+  text-align center
+  height 26px
+  &.rc-show-init
+    bottom 0
