--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -1,4 +1,15 @@
 @require '../css/box'
+box-shadow()
+  box-shadow 0px 0px 5px 1px rgba(0, 0, 0, 0.18)
+
+@keyframes spin
+    from
+      transform rotate(0deg)
+    to
+      transform rotate(360deg)
+.rc-spinning
+  animation spin 4s infinite linear
+
 body .Adapter_root.Adapter_right
   right 60px
 .rc-auth-btn
@@ -57,7 +68,7 @@ body .Adapter_root.Adapter_right
   left 0
   top calc(50% - 80px)
   background #fff
-  box-shadow 0px 0px 5px 1px rgba(0, 0, 0, 0.18)
+  box-shadow()
 .rc-dismiss-auth
   cursor pointer
   font-size 16px
@@ -94,7 +105,7 @@ body .Adapter_root.Adapter_right
   overflow-y scroll
   background #fff
   padding-top 50px
-  box-shadow 0px 0px 5px 1px rgba(0, 0, 0, 0.18)
+  box-shadow()
 
 .rc-hide-contact-panel
   left -300px
@@ -134,3 +145,143 @@ body .Adapter_root.Adapter_right
   height 26px
   &.rc-show-init
     bottom 0
+
+.rc-loading
+.rc-insightly-contact-frame
+  position absolute
+  left 0
+  width 100%
+  height 100%
+  background #fff
+  z-index 100
+.rc-close-box
+  position absolute
+  left 0
+  top 0
+  padding-left 80px
+  width 100%
+  height 110px
+  line-height 102px
+  font-size 38px
+  color #fff
+  z-index 380
+  background #FF5722
+.rc-loading
+  left 0
+  width 100%
+  top 110px
+  line-height 100px
+  text-align center
+  font-size 28px
+  background #fff
+  z-index 200
+.rc-contact-panel-loaded
+  .rc-loading
+    display none
+
+
+.rc-contact-panel-loaded
+  .rc-loading
+    display none
+
+.rc-sync-btns
+  text-align right
+.rc-sync-form
+  position absolute
+  z-index 100000
+  background rgba(255,255,255, 1)
+  overflow hidden
+  left -300px
+  width 300px
+  bottom 40px
+  height 460px
+  box-shadow()
+  border-right 3px solid #ff7a59
+.rc-sync-show
+  left 0
+.rc-sync-input
+  box-sizing border-box
+  margin 0
+  padding 0
+  display inline-block
+  padding 4px 11px
+  width 100%
+  line-height 1.5
+  color rgba(0, 0, 0, 0.65)
+  border 1px solid #d9d9d9
+  border-radius 4px
+  transition all .3s
+  &:hover
+    border-color #40a9ff
+.rc-sync-btn
+  line-height 1.5
+  display inline-block
+  text-align center
+  touch-action manipulation
+  cursor pointer
+  border 1px solid transparent
+  white-space nowrap
+  padding 0 15px
+  border-radius 3px
+  height 32px
+  user-select none
+  transition all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1)
+  position relative
+  box-shadow 0 2px 0 rgba(0, 0, 0, 0.015)
+  color rgba(0, 0, 0, 0.65)
+  background-color #fff
+  border-color #d9d9d9
+.rc-btn-submit
+  background #08c
+  color #fff
+
+.rc-call-dds
+  display none
+  left -20px
+  top 100%
+  width 300px
+  background #fff
+  box-shadow()
+
+.rc-call-dd
+  padding 8px 10px
+  cursor pointer
+  border-bottom 1px solid #eee
+  &:last-child
+    border none
+  &:hover
+    background #08c
+    color #fff
+
+
+.rc-has-dd
+  position relative
+  height 33px
+  width 163px
+  z-index 888
+  &:hover
+    .rc-call-dds
+      display block
+      z-index 8888
+
+.rc-phone-list
+  background #fff
+  padding 10px
+  box-shadow()
+
+.rc-msg-wrap
+  position fixed
+  left -200px
+  top 50%
+  width 200px
+  padding 10px
+  background #fff
+  border-right 3px solid #ff7a59
+  z-index 10000
+  box-shadow()
+.rc-msg-enter
+  left 0
+.rc-msg-type-success
+  color #28a745
+.rc-msg-type-warn
+  color #ffc107
