button insert done

--- a/src/chrome-extension/style.styl
+++ b/src/chrome-extension/style.styl
@@ -17,7 +17,6 @@ body .Adapter_root.Adapter_right
   display inline-block
   vertical-align middle
   font-size .75rem
-  line-height .75rem
   padding .5625rem 1rem
   color #333
   border-radius .1875rem
@@ -285,3 +284,9 @@ body .Adapter_root.Adapter_right
   color #28a745
 .rc-msg-type-warn
   color #ffc107
+.rc-btn-wrapper
+  margin-bottom 35px
+  padding-left 15px
+  margin-top -25px
+.rc-wrapped #contact-masthead-shim
+  margin-top 145px !important
