Handle no tab error in background page

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -3,3 +3,6 @@
 // check
 // node_modules/ringcentral-embeddable-extension-common/src/no-spa/style.styl
 // for overides or as example
+
+.rc-upgrade-dom
+  z-index 1100
