Support new sync features

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -6,3 +6,16 @@
 
 .rc-upgrade-dom
   z-index 1100
+.rc-sync-area
+  box-sizing border-box
+  margin 0
+  padding 0
+  width 100%
+  padding 4px 11px
+  color rgba(0, 0, 0, 0.65)
+  line-height 1.5
+  background-color #fff
+  border 1px solid #d9d9d9
+  border-radius 4px
+  -webkit-transition all 0.3s
+  transition all 0.3s
