Use in page widget, fix activities list and inbound call popup

--- a/src/custom.styl
+++ b/src/custom.styl
@@ -19,3 +19,11 @@
   border-radius 4px
   -webkit-transition all 0.3s
   transition all 0.3s
+.rc-third-party-contact-frame
+  top 60px
+  height calc(100% - 60px)
+.rc-contact-panel
+  width 100%
+  left 0
+.rc-contact-panel.rc-hide-to-side
+  left -100%
